--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
         <div>
             <div id="titulo-area">
                 <div id="fcc">
-                    Desenvolvido pela <a href="https://codepen.io/freeCodeCamp" target="_blank">freeCodeCamp.org</a> <a href="#"><button>+ Follow</button></a>
+                    Desenvolvido pela <a href="https://codepen.io/freeCodeCamp" target="_blank">freeCodeCamp.org</a> <a href="#"><button class="hidden verde">+ Follow</button></a>
                 </div>
                 <div id="titulo">
                     <h1>FCC: Survey Form</h1>
                 </div>
             </div>
-
- 
-                    <div id="botoes">
-                        <a href="#"><button><span class="material-symbols-outlined">favorite</span></button></a>
-                        <a href="#"><button>Ver código fonte</button></a>
-                        <a href="#"><button>Criar uma conta</button></a>
-                        <a href="#"><button>Entrar</button></a>
-                    </div>
-
-
+            <div id="botoes">
+                <a href="#"><button class="outros-botoes"><span class="material-symbols-outlined">favorite</span></button></a>
+                <a href="#"><button class="hidden outros-botoes">Ver código fonte</button></a>
+                <a href="#"><button class="verde">Criar uma conta</button></a>
+                <a href="#"><button class="outros-botoes">Entrar</button></a>
+            </div>
         </div>
     </header>
     <main>
