--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="fcc-icon.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <header>
@@ -35,7 +36,7 @@
                 <p>Obrigado por tirar um tempo para nos ajudar a melhorar nossa plataforma</p>
             </div>
             <section>
-                <form action="" method="post">
+                <form action="#" method="post">
                     <p>
                         <label for="inome">Nome</label>
                         <input type="text" name="nome" id="inome" required autocomplete="name" placeholder="Coloque seu nome">
